# rust-gameboy

./: Cargo.toml
src/: apu.rs  bitutils.rs  bootrom.rs  bus.rs  clock.rs  cpu.rs  debugger.rs  iomapped.rs  joystick.rs  machine.rs  main.rs  memory.rs  memorybus.rs  ppu.rs  rom.rs  screen.rs  serial.rs  timer.rs
src/apu/: channel1.rs  channel2.rs  channel3.rs  channel4.rs
src/clock/: waker.rs
src/rom/: mbc.rs  mbc0.rs  mbc1.rs  mbc3.rs  mbc5.rs
